kubernetes/applications/ceph-storage/manifests/nexterm/nexterm-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: nexterm
  namespace: nexterm
  labels:
    app: nexterm
spec:
  type: ClusterIP
  selector:
    app: nexterm
  ports:
    - name: http
      protocol: TCP
      port: 6989
      targetPort: 6989
