kubernetes/applications/ceph-storage/manifests/nexterm/nexterm-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nexterm-ingress
  namespace: nexterm
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - nexterm.example.com
  rules:
    - host: nexterm.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nexterm
                port:
                  number: 6989
